--- a/vueblog/package.json
+++ b/vueblog/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "axios": "^0.17.1",
     "element-ui": "^2.0.8",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "mavon-editor": "^2.4.13",
     "vue": "^2.5.2",
     "vue-echarts": "^2.6.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "xlsx": "^0.15.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -44,6 +46,7 @@
     "postcss-loader": "^2.0.8",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
+    "script-loader": "^0.7.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "style-loader": "^0.19.1",
