--- a/blogserver/src/main/resources/log4j.properties
+++ b/blogserver/src/main/resources/log4j.properties
@@ -1,5 +1,13 @@
 log4j.rootLogger=DEBUG,stdout
-log4j.logger.org.mybatis=DEBUG
+log4j.logger.com.mybatis=DEBUG
+log4j.logger.com.mybatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.mybatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.mybatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+#log4j.logger.java.sql.Connection=DEBUG
+#log4j.logger.java.sql.Statement=DEBUG
+#log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.java.sql.ResultSet=INFO 
+log4j.logger.com.springframework=DEBUG
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n 
