--- a/blogserver/src/main/resources/application.properties
+++ b/blogserver/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vueblog2?useSSL=FALSE&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
-mybatis.config-location=classpath:/mybatis-config.xml
- 
 server.port=8081
-logging.level.org.springframework.security=info
+mybatis.config-location=classpath:/mybatis-config.xml
+logging.level.org.springframework.security=INFO
+
