--- a/blogserver/src/main/resources/log4j.properties
+++ b/blogserver/src/main/resources/log4j.properties
@@ -1,13 +1,15 @@
-log4j.rootLogger=DEBUG,stdout
-log4j.logger.com.mybatis=DEBUG
-log4j.logger.com.mybatis.common.jdbc.SimpleDataSource=DEBUG
-log4j.logger.com.mybatis.common.jdbc.ScriptRunner=DEBUG
-log4j.logger.com.mybatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
-#log4j.logger.java.sql.Connection=DEBUG
-#log4j.logger.java.sql.Statement=DEBUG
-#log4j.logger.java.sql.PreparedStatement=DEBUG
-log4j.logger.java.sql.ResultSet=INFO 
-log4j.logger.com.springframework=DEBUG
+log4j.logger.java.sql=DEBUG
+log4j.logger.java.sql.Connection = DEBUG
+log4j.logger.java.sql.Statement = DEBUG
+log4j.logger.java.sql.PreparedStatement = DEBUG
+log4j.logger.java.sql.ResultSet = DEBUG
+
+
+log4j.logger.org.sang.mapper=TRACE
+
+log4j.rootLogger= stdout
+
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n 
+log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
+
