--- a/vueblog/package.json
+++ b/vueblog/package.json
@@ -17,6 +17,7 @@
     "mavon-editor": "^2.4.13",
     "vue": "^2.5.2",
     "vue-echarts": "^2.6.0",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.1",
     "xlsx": "^0.15.1"
   },
