--- a/vueblog/package.json
+++ b/vueblog/package.json
@@ -19,6 +19,7 @@
     "vue-echarts": "^2.6.0",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.1",
+    "vuex": "^3.1.1",
     "xlsx": "^0.15.1"
   },
   "devDependencies": {
