--- a/vueblog/package.json
+++ b/vueblog/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.0.8",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "mavon-editor": "^2.4.13",
     "vue": "^2.5.2",
     "vue-echarts": "^2.6.0",
