增加限制出力线

--- a/blogserver/src/main/resources/application.properties
+++ b/blogserver/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.datasource.username=root
 spring.datasource.password=123456
 server.port=8081
 mybatis.config-location=classpath:/mybatis-config.xml
-logging.level.org.springframework.security=INFO
+logging.level.org.springframework.security=Debug
+#spring.devtools.restart.log-condition-evaluation-delta=false
+#spring.devtools.add-properties=false
+#logging.level.web=INFO
+
 
